Header on mobile fix

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -28,6 +28,7 @@
 			background-image: url("/src/img/icons/icon-burger.svg");
 			background-position: center;
 			transition: background-image .2s ease;
+			margin: 0;
 			margin-left: auto;
 			&:checked {
 				background-image: url("/src/img/icons/icon-burger-active.svg");
@@ -90,11 +91,11 @@
 
 	@media (max-width: 992px) {
 		position: fixed;
-		// background-color: #361f63;
 		backdrop-filter: blur(8px);
 		top: 20px;
 		left: 20px;
 		right: 20px;
+		padding: 10px 15px;
 		&__burger {
 			&-button {
 				display: block;
